# carla-ROS-WS-shenyang-2026

./: .gitignore  .gitmodules  README.md  mono_crash.d4716fb0.0.json  mono_crash.d4716fb0.1.json  voiture_legere.json
carla-control-algorithm/carla_control_display/: setup.cfg  setup.py
carla-control-algorithm/carla_control_display/launch/: carla_control_display.launch.py
carla-control-algorithm/carla_lqr_control/: CMakeLists.txt  package.xml
carla-control-algorithm/carla_lqr_control/include/carla_lqr_control/: carla_lqr_pid_control.h  lqr_controller.h  pid.hpp  reference_line.hpp
carla-control-algorithm/carla_lqr_control/src/: carla_lqr_pid_control.cpp  lqr_controller.cpp
carla-control-algorithm/carla_mpc_control/: CMakeLists.txt
carla-control-algorithm/carla_pid_control/: CMakeLists.txt
carla-control-algorithm/carla_pid_control/include/carla_pid_control/: carla_stanley_pid_control.hpp  common.h
carla-control-algorithm/carla_pid_control/launch/: carla_stanley_pid_control.launch.py
carla-control-algorithm/carla_pid_control/src/: carla_stanley_pid_control.cpp
carla_interface/: setup.py
carla_interface/carla_interface/: inference_trajectoire_node.py  render.py
carla_lidar_mapping/: CMakeLists.txt
carla_lidar_mapping/include/carla_lidar_mapping/: lidar_mapping.hpp
carla_lidar_mapping/src/: lidar_mapping.cpp
carla_map_visualization/: setup.cfg  setup.py
carla_map_visualization/launch/: map_visualization.launch.py
carla_map_visualization/rviz/: carla_map_vis.rviz
carla_planning/: package.xml  setup.cfg  setup.py
carla_planning/SpeedRecognition/: dataset.txt  link to train dataset  train_classifier.py
carla_planning/SpeedRecognition/Dataset_Stop_Speed_sign/: crop_dataset.py
carla_planning/SpeedRecognition/Dataset_Stop_Speed_sign/dataset_vision/archive/: labels.csv
carla_planning/SpeedRecognition/autres/: convert.py
carla_planning/carla_planning/: YOLO_recognition_node.py  motion_planner_node.py  speed_limit_node.py  speed_sign_node.py  traffic_light_node.py  traffic_sign_node.py  yolo_detector_node.py
carla_planning/config/: planning_params.yaml
carla_planning/launch/: planning_visualization.launch.py
carla_prediction/: setup.cfg  setup.py
carla_prediction/carla_prediction/: paths.json  prediction_node.py
carla_prediction/config/: prediction_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/carla_ackermann_control/share/carla_ackermann_control/: carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch.py  package.ps1  package.sh  package.xml  settings.yaml
install/carla_ackermann_msgs/share/carla_ackermann_msgs/: local_setup.sh  package.ps1  package.sh
install/carla_ad_agent/share/carla_ad_agent/: carla_ad_agent.launch.py  (+2 more)
log/: latest_build
scripts/: launch_VMless.sh  launch_all.sh  launch_recolte.sh  launch_simu_P1.sh
(+894 files in other folders)
